src/assets/css/style.css
/* Global Styles Goes Here... */

@import url("https://unpkg.com/bulma@0.8.0/css/bulma.min.css");
@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css");
@import url("./hover.min.css");
@import url("./helpers.css");

@font-face {
  font-family: "Nexa Bold";
  src: url("../fonts/Nexa_Bold.otf");
}
body {
  font-family: "Nexa Bold" !important;
  height: 100%;
  color: white !important;
  background-color: #040127;
}
.text-white{
    color: white !important;
}
.text-pink{
 color: #c54da0 !important;
}
.text-dark{
  color: #040127 !important
}
.is-pink{
  background-color: #c54da0 !important;
  color: #fff !important;
  border: none !important
}
.text-purple{
  color: #760bff;
}
.self-align-center{
  align-self: center !important;
}
.justify-text{
  text-align: justify;
}
.d-inline{
  display: inline-block !important;
}

.section-block{
  margin-top: 5rem !important;
  margin-bottom: 5rem !important;
}

